<resources>
    <string name="app_name">Wrocław Usługi</string>                        <!-- название заголовка-->

    <string name="meb_top">Meble</string>                                 <!-- подписи кнопок в горизонтальном лайауте-->
    <string name="nap_top">Naprawy</string>
    <string name="hyd_top">Hydraulika</string>
    <string name="ele_top">Elektryka</string>
    <string name="mal_top">Malowanie</string>
    <string name="spr_top">Sprzątanie</string>
    <string name="agd_top">AGD</string>

    <string name="red_button_1">Zamówić</string>                        <!-- кнопка заказать-->

    <string name="ele_txt">Wszystkie usługi elektryczne</string>        <!-- текст под заголовком-->
    <string name="hyd_txt">Wszystkie usługi hydrauliczne</string>
    <string name="meb_txt">Wszystkie usługi meblowe</string>
    <string name="agd_txt">Naprawa, instalacja sprzętu AGD</string>
    <string name="mal_txt">Malowanie ścian i sufitów</string>
    <string name="spr_txt">Mieszkań, poremontowe, biura</string>

    <string name="meb_title">Meble</string>                             <!-- заголовки карточек-->
    <string name="nap_title">Naprawy</string>
    <string name="hyd_title">Hydraulika</string>
    <string name="ele_title">Elektryka</string>
    <string name="agd_title">AGD</string>
    <string name="mal_title">Malowanie</string>
    <string name="spr_title">Sprzątanie</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_meble">ActivityMeble</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="textOpisMeble">Montaż i składanie mebli:</string>

    <string name="txtMebOpis2"> \u0020 Montaż mebli Ikea może przysporzyć nieco trudności, zwłaszcza w przypadku bardziej
        rozbudowanych konstrukcji. Składanie mebli często przerasta klientów i w efekcie jest potrzebna pomoc fachowców.</string>


    <!--это так пишется пробел в стрингах \u0020 -->
    <string name="txtMebOpis3"> \u0020 Szukasz pomocy w skręcaniu mebli IKEA? Skontaktuj się z nami! Oferujemy profesjonalny
        montaż mebli IKEA.</string>

    <string name="txtMebOpis4"> \u0020 Męczy Cię samodzielny montaż mebli? Potrzebujesz pomocy z meblościanką? Brakuje Ci siły, by uporać
        się z poskładaniem mebli w domu? Jeśli nie chcesz poświęcać tej czynności całego wolnego weekendu i zależy Ci na tym, by meble zostały
        sprawnie i poprawnie skręcone, warto skorzystać z usługi profesjonalnego montażu mebli.</string>

    <string name="txtMebOpis5"> \u0020 Ile kosztuje montaż mebli?
        Standardowe stawki za montaż mebli mogą się wahać od 50 do nawet 150 zł za godzinę pracy. Minimalne koszty usługi oscylują zazwyczaj w granicy
        150 – 400 złotych za jeden montaż. Wiele zależy od tego, ilu montażystów zamówimy oraz jakie konkretnie meble chcemy złożyć.</string>

    <string name="todo">TODO</string>

    <string name="textOpisNaprawy">Drobne naprawy:</string>

    <string name="txtNapOpis2"> \u0020 Niewielkie, kuchenne usterki, drobne naprawy przed sprzedażą mieszkania, prace porządkowe,
        wiercenie otworów, wieszanie szafek, półek, karniszy, obrazów, luster, rolet, montaż, demontaż, naprawa, przestawianie mebli,
        montaż telewizora LCD na ścianie. </string>


    <string name="txtNapOpis3"> \u0020  Wiele innych czynności naprawczych i konserwacyjnych, niezbędnych w funkcjonowaniu  mieszkania, domu, biura. </string>


    <string name="txtNapOpis4"> \u0020 Jeśli Ci brak czasu, narzędzi, umiejętności lub chęci do wykonania
        drobnych napraw domowych  - postaramy Ci się pomóc szybko,
        tanio i solidnie.</string>

    <string name="txtNapOpis5"> \u0020 Ile kosztuje drobna naprawa?
        Standardowe stawki  mogą się wahać od 50 do nawet 150 zł za godzinę pracy. Minimalne koszty usługi oscylują zazwyczaj w granicy
        150 złotych. Wiele zależy od tego,  że nigdy nie wiadomo ile czasu zajmie  rozwiązanie problemu.</string>

    <string name="textOpisHydraulika">Usługi hydrauliczne:</string>

    <string name="txtHydOpis2"> \u0020 Zajmujemy się szeroko pojętą działalnością hydrauliczną. Oferujemy kompleksowe usługi hydrauliczne takie jak: </string>

    <string name="txtHydOpis3"> \u0020  Montaż urządzeń łazienkowych: umywalki, wanny, kabiny prysznicowe, instalacja w systemach PP i ALU-PEX.
         Wszelkiego rodzaju instalacje hydrauliczne, instalacje wodno-kanalizacyjne, montaż centralnego ogrzewania, zamontowanie ogrzewania podłogowego,
         montaż instalacji gazowych, wymiana armatury, udrażnianie odpływów kanalizacyjnych, naprawa spłuczek, cykliczne przeglądy i remonty instalacji,
         biały montaż – podłączanie np. sedesów stojących i podwieszanych, brodzików i innych elementów. </string>

    <string name="txtHydOpis4"> \u0020 Instalacje wodno-kanalizacyjne. Wykonanie kompletnego podejścia wodno kanalizacyjnego z rurami miedzianymi.
        Normalny poziom skomplikowania prac.
        Cena obejmuje usługę hydrauliczną wraz ze wszystkimi niezbędnymi materiałami 500 zł/punkt. Instalacja centralnego ogrzewania.
        Wykonanie nowej instalacji centralnego ogrzewania z rurami PP.
        Normalny poziom skomplikowania prac, instalacja w budynkach mieszkalnych. 150  zł/punkt. Ogrzewanie podłogowe Montaż ogrzewania podłogowego
        w budynkach mieszkalnych z rurą wielowarstwową 16x2,0 mm, folią, styropianem, rozdzielaczami i innymi niezbędnymi materiałami.
        Cena nie zawiera wykonania projektu 170 zł/punkt. </string>

    <string name="txtHydOpis5"> \u0020 Demontaż punktów hydraulicznych Koszt usługi demontażu starego punktu hydraulicznego. Normalny stopień skomplikowania
        prac. 140 zł/punkt. Owe ceny stanowią wartość orientacyjną i mogą być uzależnione od specyfiki pomieszczeń, stopnia skomplikowania instalacji,
        jakości materiałów itp.</string>

    <string name="textOpisElektryka">Usługi elektryka:</string>

    <string name="txtEleOpis2"> \u0020 Montaż taśmy LED. Montaż instalacji elektrycznej oraz okablowanie mieszkania - odpowiednio rozmieszczę oraz zabezpieczę. </string>


    <string name="txtEleOpis3"> \u0020  Braki prądu w mieszkaniu lub lokalu - awarie, na które trzeba szybko reagować. Niestety nie zawsze jesteśmy w
        stanie powiedzieć przez telefon, co jest przyczyną, dlatego takie zlecenie wymaga weryfikacji na miejscu. Przyczyn może być wiele: zwarcie urządzenia
        podłączonego do instalacji, zwarcie gniazdka, przepalony bezpiecznik. </string>


    <string name="txtEleOpis4"> \u0020 Ręczne wykonanie wykopu Ręczne wykonanie wykopu do głębokości 1 - 1,5 metra. Cena wraz z wydobyciem urobku.
        130 zł/mb. Ułożenie bednarki uziemiającej wraz z montażem. Cena obejmuje również usługę podłączenia 40zł/mb. Układanie instalacji elektrycznej 130 zł/punkt,
        Montaż gniazda jednofazowego 30 zł/punkt, Montaż gniazda trójfazowego 40 zł/punkt, Montaż oświetlenia wewnątrz budynku 80 zł/punkt. </string>

    <string name="txtEleOpis5"> \u0020 Ile kosztuje drobna naprawa?
        Wszystko zależy od stopnia skomplikowania prac, standardu usług oraz regionu, w którym prace będą wykonywane.</string>

</resources>