<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtOpsMbl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ActivityMeble">
    <!--THIS IS PICTURE,I SET FIRST-->
    <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="389dp"
        android:layout_height="335dp"
        app:srcCompat="@mipmap/background_layout2"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="33dp"
        tools:ignore="MissingConstraints" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/textOpisMeble"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/txtMebOpis2"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/txtMebOpis3"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/txtMebOpis4"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="19sp" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/txtMebOpis5"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="310dp"
                android:layout_height="192dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/meb_pic1"
                android:contentDescription="@string/todo" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
